@@ -35,6 +35,7 @@ Version 1.0.xxx (June xxth 2013)
 - Implemented: Dimmer devices keep there dim value when not setting the level (on/off)
 - Implemented: Italian language support (thanks to the community!)
 - Implemented: User now sees only allowed devices
+- Implemented: X10 Security Remote, When status is 'Panic' the alarm can now be disarmed
 
 Version 1.0.666 (May 28th 2013)
 - Implemented: Settings, Doorbell could be send as 'Group On' or 'On' command
